<resources>
    <string name="app_name">Nfc Payment</string>

    <string name="title_login">Login</string>
    <string name="title_register">Заполнить заявку</string>
    <string name="title_home">Главная</string>
    <string name="title_payment">Оплата</string>
    <string name="title_history">История</string>

    <string name="login_email_hint">Введите Email</string>
    <string name="login_password_hint">Введите пароль</string>
    <string name="button_login">Войти</string>
    <string name="login_button_forgot_password">Забыли пароль?</string>
    <string name="login_register_help">Ещё нет аккаунта?</string>
    <string name="login_register_button">Регистрация</string>
    <string name="login_wrong_logpass">Неправильный логин или пароль</string>

    <string name="register_name_title">Имя</string>
    <string name="register_name_hint">Иван</string>
    <string name="register_phone_title">Номер телефона</string>
    <string name="register_phone_hint">+7 000 000-00-00</string>
    <string name="register_email_title">E-mail</string>
    <string name="register_email_hint">example@gmail.com</string>
    <string name="register_inn_title">ИНН компании</string>
    <string name="register_inn_hint">0000000000</string>
    <string name="button_register">Отправить заявку</string>
    <string name="register_info">После заполнения заявки с вами свяжется\nменеджер для уточнения деталей подключения.</string>
    <string name="register_successful">Вы успешно отправили заявку. Мы с вами свяжемся</string>

    <string name="home_balance_text">Баланс</string>
    <string name="home_balance">%1$s,%2$s ₽</string>
    <string name="home_payment_patterns_text">Шаблоны оплаты</string>

    <string name="create_payment_title">Оплата</string>
    <string name="create_payment_sum">Сумма</string>
    <string name="create_payment_sum_hint">0</string>
    <string name="create_payment_payment_method_title">Способ оплаты</string>
    <string name="create_payment_payment_card_method">По карте</string>
    <string name="create_payment_payment_qr_method">По QR коду</string>

    <string name="nfc_activity_sum_text">Сумма:</string>
    <string name="nfc_activity_button_cancel">Отменить</string>

    <string name="payment_successful_text">Успешная оплата!</string>
    <string name="payment_successful_thanks_text">Спасибо за покупку, хорошего дня</string>
    <string name="payment_successful_button_back">Назад</string>

    <string name="internet_error_toast">Ошибка с интернет соединением</string>

    <string name="history_with_nfc">С помощью NFC</string>

    <string name="history_payment_title">Информация о платеже</string>
    <string name="history_payment_info">Подробности</string>
    <string name="history_payment_card_title">Карта</string>
    <string name="history_payment_date_title">Дата и время оплаты</string>
    <string name="history_payment_type_title">Способ оплаты</string>
    <string name="history_payment_save_button">Сохранить чек</string>
    <string name="history_payment_return_payment_button">Вернуть платёж</string>

    <string name="payment_return_successful_text">Возврат прошёл успешно!</string>
    <string name="payment_return_thanks_text">Хорошего дня</string>
</resources>