<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.paymentinfo.PaymentInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/background"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/circle_ripple"
            android:src="@drawable/ic_back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleText"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_payment_title"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:background="@color/background"
        app:layout_constraintTop_toBottomOf="@id/toolbarLayout">

        <TextView
            android:id="@+id/costText"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1 000,00 ₽" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/infoText"
        style="@style/DefaultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/history_payment_info"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/infoText">

        <ImageView
            android:id="@+id/cardTypeImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@drawable/ic_mir" />

        <TextView
            android:id="@+id/cardTitle"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/history_payment_card_title"
            android:textColor="@color/secondary"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/cardTypeImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cardText"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/cardTypeImage"
            app:layout_constraintStart_toEndOf="@id/cardTypeImage"
            tools:text="Mir ***2917" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/cardLayout">

        <ImageView
            android:id="@+id/dateImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/dateTitle"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/history_payment_date_title"
            android:textColor="@color/secondary"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/dateImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateText"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/dateImage"
            app:layout_constraintStart_toEndOf="@id/dateImage"
            tools:text="16.09.2020 16:00" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/dateLayout">

        <ImageView
            android:id="@+id/paymentTypeImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_payment_type_qr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/paymentTypeTitle"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/history_payment_type_title"
            android:textColor="@color/secondary"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/paymentTypeImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/paymentTypeText"
            style="@style/DefaultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/paymentTypeImage"
            app:layout_constraintStart_toEndOf="@id/paymentTypeImage"
            tools:text="С помощью NFC" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/RedButton"
        android:layout_marginTop="60dp"
        android:text="@string/history_payment_save_button"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>